--- a/src/styles.css
+++ b/src/styles.css
@@ -127,6 +127,12 @@ main {
   object-fit: contain;
 }
 
+.brand-badge-link {
+  display: inline-flex;
+  align-items: center;
+  margin-left: auto;
+}
+
 .brand-mark {
   width: 160px;
   height: auto;
