--- a/src/styles.css
+++ b/src/styles.css
@@ -416,6 +416,12 @@ main {
   color: #3b475d;
 }
 
+.detail-note {
+  margin: 10px 0 0;
+  font-weight: 600;
+  color: #2f3b52;
+}
+
 .detail-actions {
   display: flex;
   flex-wrap: wrap;
